--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "nodemon": "^1.17.5",
+    "react-hot-loader": "^4.3.3",
     "webpack": "^4.14.0",
-    "webpack-dev-middleware": "^3.1.3"
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
   }
 }
